# ProteinBiFi

./: CMakeLists.txt  ProteinBiFi.cpp
src/: Config.h  Constants.h  ExperimentalBitSets.cpp  ExperimentalBitSets.h  ExperimentalSpectra.cpp  ExperimentalSpectra.h  LibrarySpectra.cpp  LibrarySpectra.h  SpectrumBitSet.cpp  SpectrumBitSet.h  config.h
